--- a/styles.css
+++ b/styles.css
@@ -70,8 +70,14 @@ body {
   margin: 0;
 }
 
+.tech-container {
+  display: flex;
+
+  justify-content: space-between;
+}
+
 .my-projects-list {
-  padding: 0 0 0 18px;
+  padding: 0 0 0 20px;
 }
 
 .my-projects-link {
