--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 .main-container {
   display: flex;
   flex-direction: row-reverse;
-  width: 1200px;
+  width: 1100px;
   background: #fff;
   margin: 40px auto;
 }
@@ -15,7 +15,7 @@ body {
 /* main content section */
 
 .main-content-section {
-  padding: 50px 80px;
+  padding: 50px 60px;
 }
 
 /* about me section */
@@ -43,7 +43,7 @@ body {
 }
 
 .about-me-description {
-  width: 550px;
+  width: 630px;
   font-style: normal;
   font-weight: normal;
   font-size: 15px;
@@ -86,6 +86,11 @@ body {
   font-size: 18px;
   line-height: 24px;
   color: #212121;
+}
+
+.source-link {
+  color: #212121;
+  font-size: 15px;
 }
 
 .my-projects-item:not(:last-child) {
@@ -186,7 +191,7 @@ body {
 
 .sidebar-section {
   background: #1e2939;
-  width: 500px;
+  width: 380px;
   padding: 30px;
 }
 
@@ -200,11 +205,6 @@ body {
 }
 
 /* contacts section */
-
-.contacts-section {
-  display: grid;
-  place-items: center;
-}
 
 .contacts-section-type {
   font-style: normal;
@@ -227,8 +227,9 @@ body {
   padding: 0;
   list-style: none;
 
-  display: grid;
-  place-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .social-list__item {
@@ -249,10 +250,11 @@ body {
   fill: #fff;
 }
 
-.skills-wrapper {
+.skills-wrapper,
+.contacts-section {
   display: flex;
-
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .profile-img {
@@ -279,7 +281,6 @@ body {
 
 .tech-stack-label {
   font-weight: bold;
-  font-style: italic;
 }
 
 .role-description {
