--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ body {
 /* My work expirience company */
 
 .my-work-expirience-company {
-  color: #fb6d3a;
+  /* color: #fb6d3a; */
 }
 
 .my-work-expirience-position {
@@ -170,7 +170,7 @@ body {
 }
 
 .education-place {
-  color: #fb6d3a;
+  /* color: #fb6d3a; */
   margin: 10px 0 10px 0;
   font-size: 14px;
 }
@@ -195,7 +195,7 @@ body {
 /* sidebar section */
 
 .sidebar-section {
-  background: #1e2939;
+  /* background: #1e2939; */
   width: 380px;
   padding: 30px;
 }
@@ -297,7 +297,7 @@ body {
 }
 
 .tech-skills-item {
-  color: #fb6d3a;
+  /* color: #fb6d3a; */
 }
 
 .tech-skills-item-text {
@@ -318,7 +318,7 @@ body {
 }
 
 .soft-skills-item {
-  color: #fb6d3a;
+  /* color: #fb6d3a; */
 }
 
 .soft-skills-item-text {
